tests/snapshots/lexer__unknown__ascii_punct.snap
---
source: tests/lexer.rs
expression: "lex(\"~\")"
---
Err(
    LexError {
        message: "unexpected character: '~'",
        span: Span {
            start: 0,
            end: 1,
        },
    },
)
