tests/snapshots/lexer__unknown__non_ascii.snap
---
source: tests/lexer.rs
expression: "lex(\"é\")"
---
Err(
    LexError {
        message: "unexpected character: 'é'",
        span: Span {
            start: 0,
            end: 2,
        },
    },
)
